Fix collapse map

--- a/stophungerdev/css/index.css
+++ b/stophungerdev/css/index.css
@@ -103,3 +103,11 @@ h1 {
     margin: 0px;
     padding: 0px
 }
+
+label.error { 
+	float: left; 
+	color: red; 
+	padding-top: .5em; 
+	vertical-align: top; 
+	font-weight:bold
+}
